[gd_scene load_steps=27 format=3 uid="uid://cd1lm7663kkqk"]

[ext_resource type="Texture2D" uid="uid://dlvrvoxv04o4m" path="res://city_mode/Assets/Geraldinia_0.png" id="1_jh1ol"]
[ext_resource type="Texture2D" uid="uid://cge1377fuys03" path="res://GUI/inventory/InventoryRect.png" id="1_niwie"]
[ext_resource type="Script" path="res://city_mode/crafting/crafting.gd" id="1_ttc73"]
[ext_resource type="Texture2D" uid="uid://t7ukvod3pjr1" path="res://city_mode/Assets/Geraldinia_road.png" id="2_muf4g"]
[ext_resource type="Script" path="res://city_mode/crafting/inventoryGrid.gd" id="2_qqhid"]
[ext_resource type="PackedScene" uid="uid://d4lrybm6yo1ub" path="res://city_mode/trading/crafting_slot.tscn" id="2_sd3va"]
[ext_resource type="Resource" uid="uid://bf6q272lgp3nh" path="res://inventory/global_inventory.tres" id="3_2qfv2"]
[ext_resource type="Texture2D" uid="uid://cbedbpjj3nvgi" path="res://city_mode/Assets/Geraldinia_kuzna.png" id="3_euu8p"]
[ext_resource type="Script" path="res://city_mode/crafting/Recipes.gd" id="6_dkvga"]
[ext_resource type="PackedScene" uid="uid://blxk4ex3fpwq8" path="res://city_mode/crafting/recipe.tscn" id="6_twcsm"]
[ext_resource type="Resource" uid="uid://bn6fdo3m5610r" path="res://inventory/items/bottle_red.tres" id="7_3f4ck"]
[ext_resource type="Script" path="res://city_mode/crafting/page1.gd" id="8_ohddj"]
[ext_resource type="Resource" uid="uid://bpucxqd3g08kp" path="res://inventory/items/bottle_yellow.tres" id="8_qakaw"]
[ext_resource type="Texture2D" uid="uid://pg0t8p3rqvb0" path="res://GUI/inventory/inventorySlot.png" id="9_2osfl"]
[ext_resource type="Script" path="res://city_mode/crafting/page2.gd" id="9_aediv"]
[ext_resource type="Resource" uid="uid://b740ckyrxhwfj" path="res://inventory/items/bottle_black.tres" id="9_hyr63"]
[ext_resource type="Resource" uid="uid://cnbar3w7hii5p" path="res://inventory/items/battle_green.tres" id="10_7cggr"]
[ext_resource type="Script" path="res://city_mode/crafting/page3.gd" id="10_b2mby"]
[ext_resource type="Script" path="res://city_mode/crafting/page4.gd" id="11_f5nbc"]
[ext_resource type="Script" path="res://city_mode/crafting/page5.gd" id="12_l60gj"]
[ext_resource type="Script" path="res://city_mode/trading/description.gd" id="18_vsba0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wtegs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vlfjq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ufuii"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ct2oh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g5lir"]

[node name="crafting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = 22.0
offset_right = -20.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="crafting" type="Node2D" parent="."]
script = ExtResource("1_ttc73")

[node name="backgraund" type="Sprite2D" parent="crafting"]
position = Vector2(480, 273)
scale = Vector2(4.13333, 4.07407)
texture = ExtResource("1_jh1ol")

[node name="GeraldiniaRoad" type="Sprite2D" parent="crafting"]
position = Vector2(475.5, 270.5)
scale = Vector2(4.09583, 4.08148)
texture = ExtResource("2_muf4g")

[node name="GeraldiniaKuzna" type="Sprite2D" parent="crafting"]
position = Vector2(467.5, 233.312)
scale = Vector2(3.94583, 3.56018)
texture = ExtResource("3_euu8p")

[node name="Button" type="Button" parent="crafting"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_left = 95.0
offset_top = 146.0
offset_right = 352.0
offset_bottom = 457.0
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -70.0
offset_right = 200.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2

[node name="inventory" type="NinePatchRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(256, 140)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_niwie")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="inventoryGrid" type="GridContainer" parent="HBoxContainer/inventory"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -58.0
offset_right = 118.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
columns = 10
script = ExtResource("2_qqhid")
inventory = ExtResource("3_2qfv2")

[node name="CraftingSlot" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot2" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot3" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot4" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot5" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot6" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot7" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot8" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot9" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot10" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot11" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot12" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot13" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot14" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot15" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot16" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot17" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot18" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot19" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot20" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot21" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot22" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot23" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot24" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot25" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot26" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot27" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot28" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot29" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot30" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot31" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot32" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot33" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot34" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot35" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot36" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot37" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot38" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot39" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot40" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot41" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot42" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot43" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot44" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot45" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot46" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot47" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot48" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot49" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="CraftingSlot50" parent="HBoxContainer/inventory/inventoryGrid" instance=ExtResource("2_sd3va")]
layout_mode = 2

[node name="craft1" type="NinePatchRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture = ExtResource("1_niwie")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Recipes" type="VBoxContainer" parent="HBoxContainer/craft1"]
custom_minimum_size = Vector2(130, 130)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -62.0
offset_right = 68.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_dkvga")

[node name="Recipe" parent="HBoxContainer/craft1/Recipes" instance=ExtResource("6_twcsm")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
item = ExtResource("7_3f4ck")

[node name="Recipe2" parent="HBoxContainer/craft1/Recipes" instance=ExtResource("6_twcsm")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
item = ExtResource("8_qakaw")

[node name="Recipe3" parent="HBoxContainer/craft1/Recipes" instance=ExtResource("6_twcsm")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
item = ExtResource("9_hyr63")

[node name="craft4" type="NinePatchRect" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture = ExtResource("1_niwie")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Recipes" type="VBoxContainer" parent="HBoxContainer/craft4"]
custom_minimum_size = Vector2(130, 130)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -62.0
offset_right = 68.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_dkvga")

[node name="craft3" type="NinePatchRect" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture = ExtResource("1_niwie")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Recipes" type="VBoxContainer" parent="HBoxContainer/craft3"]
custom_minimum_size = Vector2(130, 130)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -62.0
offset_right = 68.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_dkvga")

[node name="craft2" type="NinePatchRect" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture = ExtResource("1_niwie")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Recipes" type="VBoxContainer" parent="HBoxContainer/craft2"]
custom_minimum_size = Vector2(130, 130)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -62.0
offset_right = 68.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_dkvga")

[node name="Recipe" parent="HBoxContainer/craft2/Recipes" instance=ExtResource("6_twcsm")]
layout_mode = 2
item = ExtResource("10_7cggr")

[node name="craft5" type="NinePatchRect" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture = ExtResource("1_niwie")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Recipes" type="VBoxContainer" parent="HBoxContainer/craft5"]
custom_minimum_size = Vector2(130, 130)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -62.0
offset_right = 68.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_dkvga")

[node name="page_buttons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 551.0
offset_top = 176.0
offset_right = 667.0
offset_bottom = 196.0

[node name="page1" type="Button" parent="page_buttons"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_styles/focus = SubResource("StyleBoxEmpty_wtegs")
script = ExtResource("8_ohddj")

[node name="Label" type="Label" parent="page_buttons/page1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -11.5
offset_right = 9.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="button_back" type="Sprite2D" parent="page_buttons/page1"]
show_behind_parent = true
position = Vector2(10, 10)
texture = ExtResource("9_2osfl")
vframes = 2
frame = 1

[node name="page2" type="Button" parent="page_buttons"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_styles/focus = SubResource("StyleBoxEmpty_vlfjq")
script = ExtResource("9_aediv")

[node name="Label" type="Label" parent="page_buttons/page2"]
layout_mode = 0
offset_top = -2.0
offset_right = 20.0
offset_bottom = 21.0
text = "2"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="button_back" type="Sprite2D" parent="page_buttons/page2"]
show_behind_parent = true
position = Vector2(10, 10)
texture = ExtResource("9_2osfl")
vframes = 2

[node name="page3" type="Button" parent="page_buttons"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_styles/focus = SubResource("StyleBoxEmpty_ufuii")
script = ExtResource("10_b2mby")

[node name="Label" type="Label" parent="page_buttons/page3"]
layout_mode = 0
offset_left = -1.0
offset_top = -2.0
offset_right = 21.0
offset_bottom = 21.0
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="button_back" type="Sprite2D" parent="page_buttons/page3"]
show_behind_parent = true
position = Vector2(10, 10)
texture = ExtResource("9_2osfl")
vframes = 2

[node name="page4" type="Button" parent="page_buttons"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_styles/focus = SubResource("StyleBoxEmpty_ct2oh")
script = ExtResource("11_f5nbc")

[node name="Label" type="Label" parent="page_buttons/page4"]
layout_mode = 0
offset_left = 1.0
offset_top = -2.0
offset_right = 20.0
offset_bottom = 21.0
text = "4"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="button_back" type="Sprite2D" parent="page_buttons/page4"]
show_behind_parent = true
position = Vector2(10, 10)
texture = ExtResource("9_2osfl")
vframes = 2

[node name="page5" type="Button" parent="page_buttons"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_styles/focus = SubResource("StyleBoxEmpty_g5lir")
script = ExtResource("12_l60gj")

[node name="Label" type="Label" parent="page_buttons/page5"]
layout_mode = 0
offset_left = 1.0
offset_top = -2.0
offset_right = 20.0
offset_bottom = 21.0
text = "5"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="button_back" type="Sprite2D" parent="page_buttons/page5"]
show_behind_parent = true
position = Vector2(10, 10)
texture = ExtResource("9_2osfl")
vframes = 2

[node name="description" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_left = 280.0
offset_top = 342.0
offset_right = 680.0
offset_bottom = 405.0
texture = ExtResource("1_niwie")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
script = ExtResource("18_vsba0")

[node name="Label" type="Label" parent="description"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.0
offset_top = -23.5
offset_right = 191.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="crafting/Button" to="crafting" method="_on_button_exit_crafting_pressed"]
[connection signal="item_changed" from="HBoxContainer/inventory/inventoryGrid" to="HBoxContainer/craft1/Recipes" method="_on_inventory_grid_item_changed"]
[connection signal="item_changed" from="HBoxContainer/inventory/inventoryGrid" to="HBoxContainer/craft4/Recipes" method="_on_inventory_grid_item_changed"]
[connection signal="item_changed" from="HBoxContainer/inventory/inventoryGrid" to="HBoxContainer/craft3/Recipes" method="_on_inventory_grid_item_changed"]
[connection signal="item_changed" from="HBoxContainer/inventory/inventoryGrid" to="HBoxContainer/craft2/Recipes" method="_on_inventory_grid_item_changed"]
[connection signal="item_changed" from="HBoxContainer/inventory/inventoryGrid" to="HBoxContainer/craft5/Recipes" method="_on_inventory_grid_item_changed"]
[connection signal="button_down" from="page_buttons/page1" to="page_buttons/page1" method="_on_button_down"]
[connection signal="button_up" from="page_buttons/page1" to="page_buttons/page1" method="_on_button_up"]
[connection signal="pressed" from="page_buttons/page1" to="page_buttons/page1" method="_on_pressed"]
[connection signal="toggled" from="page_buttons/page1" to="page_buttons/page1" method="_on_toggled"]
[connection signal="pressed" from="page_buttons/page2" to="page_buttons/page2" method="_on_pressed"]
[connection signal="pressed" from="page_buttons/page3" to="page_buttons/page3" method="_on_pressed"]
[connection signal="pressed" from="page_buttons/page4" to="page_buttons/page4" method="_on_pressed"]
[connection signal="pressed" from="page_buttons/page5" to="page_buttons/page5" method="_on_pressed"]
